fix(server): a binary neither spends the budget nor ends the walk
The total-size check ran before the binary test, so a large image near
the end of the budget still stopped the walk — and took every source
file after it, while reporting only that the size bound was reached.
What a blob is now decides whether it is staged at all, before its size
decides whether the walk goes on.

The test proves what the exclusion buys: a budget two thirds the size of
the image, and the text after it survives only because the image is
neither staged nor counted. The contract note says the test is a
heuristic rather than a guarantee about every binary format.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GZzUtPvAhEnBHsxqWTaRHn